ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  tls:
    - secretName: risf-secret
      hosts:
        -  hello-risf.local
    - secretName: itsf-secret
      hosts:
        - hello-itsf.local
  rules:
    - host: hello-risf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: risf-nginx-service
                port:
                  number: 8082
    - host: hello-itsf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: itsf-nginx-service
                port:
                  number: 8083
